--- a/AdventOfCode2024-Day1/AdventOfCode2024-Day1.fsproj
+++ b/AdventOfCode2024-Day1/AdventOfCode2024-Day1.fsproj
@@ -10,6 +10,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Day1.fs" />
+    <Content Include="Data1-Example.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data1.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Compile Include="Tests.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
