--- a/AdventOfCode2024-Day12/AdventOfCode2024-Day12.fsproj
+++ b/AdventOfCode2024-Day12/AdventOfCode2024-Day12.fsproj
@@ -11,6 +11,15 @@
 
   <ItemGroup>
     <Compile Include="Day12.fs" />
+    <Content Include="Data12-Example4.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data12-Example3.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data12-Example2.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Data12-Example.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
